URLConnection class.